--- a/reviews.html
+++ b/reviews.html
@@ -66,7 +66,7 @@
 				</div>
 				<br /><br />
 				<div class = "reviewbox">
-					<img class = "reviewimg" src = "img/rgiantrat.png" alt = "'Giant Rat\'" style = "float: left; border-radius: 100px; margin-bottom: 20px;"/>
+					<img class = "reviewimg" src = "img/rgiantrat.PNG" alt = "Giant Rat" style = "float: left; border-radius: 100px; margin-bottom: 20px;"/>
 					<p> Me and my boys had fantastic outings here. No meal on the menu I wouldn’t recommend, and the atmosphere is brilliant. Only complaint I have is that the waitresses mistook me for a mouse on several occasions, but the formal complaints were professionally handled. </p>
 					<p><b> ★★★★ </b> <br />
 					<i> - "Giant Rat" (crime boss) </i></p>
